<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/login_title"
                    android:textColor="@color/red"
                    android:textSize="75sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_subtitle"
                android:textAlignment="center"
                android:textColor="@color/black_alt"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/login_field_email"
                app:hintTextColor="@color/red"
                app:boxStrokeColor="@color/red"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilContrasena"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/login_field_password"
                app:hintTextColor="@color/red"
                app:boxStrokeColor="@color/red"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/red"
                android:text="@string/login_button_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/black_alt"
                android:text="@string/login_button_register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="16dp" />

            <TextView
                android:id="@+id/tvRestablecerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/login_link_restore"
                android:textAlignment="center"
                android:textColor="@color/black_alt"
                android:textSize="16sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="10dp"
                android:background="@color/splash_background" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/login_trademark"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="70dp"
        android:layout_height="72dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>