<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background"
    tools:context=".ui.fragments.SongDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingTop="15dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:text="@string/title" />
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ivImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="30dp"
                        app:riv_corner_radius="10dp"
                        tools:src="@mipmap/ic_launcher" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_artist" />
                        <TextView
                            android:id="@+id/tvArtist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:text="@string/artist" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_album" />
                        <TextView
                            android:id="@+id/tvAlbum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:text="@string/album" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_genre" />
                        <TextView
                            android:id="@+id/tvGenre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:text="@string/genre" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_release_date" />
                        <TextView
                            android:id="@+id/tvReleaseDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:text="@string/release_date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/ic_record_label" />
                        <TextView
                            android:id="@+id/tvRecordLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15dp"
                            android:paddingTop="15dp"
                            android:paddingRight="15dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:text="@string/record_label" />
                    </LinearLayout>

                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:id="@+id/ytpvVideo"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </ScrollView>

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>